Fix zoom css & z-index

--- a/src/components/EmblemModal.css
+++ b/src/components/EmblemModal.css
@@ -5,7 +5,7 @@
   left: 0px;
   right: 0px;
   background-color: rgba(100, 100, 100, 0.5);
-  z-index: 450;
+  z-index: 600;
 }
 
 .emblem-modal-window {
